Readability fix.

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -95,6 +95,7 @@ div.content {
 div.hr {
     height: 1px;
     background: #f0f7ff;
+    box-shadow: 1px 1px 2px black;
 }
 
 img.pycslogo {
@@ -144,7 +145,7 @@ a.light:link, a.light:visited		{color: #f0f7ff; font-family: OpenSans-Semibold}
 .center		{text-align: center;}
 .smallBR	{margin: 0px; padding:0px; clear: both; height: 6px;}
 .nowrap     {white-space: nowrap; overflow:hidden;}
-.light      {color: #f0f7ff;}
+.light      {color: #f0f7ff; text-shadow: 1px 1px 1px black;}
 .rightmost  {text-align: right;}
 
 h1 {font-family: OpenSans-Semibold;}
@@ -158,6 +159,7 @@ h2 {
     font-size: 36px;
     font-weight: bold;
     color: #f0f7ff;
+    text-shadow: 1px 1px 2px black;
 }
 
 div.footer	{font-size: 0.5em, font-family: OpenSans-Light; font-size: 80%;}
